    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 4086 FIX: websphere_mq_queues: fixed unknown variable
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...

    Multisite:
    * 3970 SEC: Fixed possible URL injection on index page...
    * 4037 FIX: Fix graphs that have optional metrics...
    * 3974 FIX: Sorting comments in hover menu of comments icon by time now
    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
    * 3980 FIX: Fixed possible flickering GUI when using Chrome and zooming the page

    WATO:
    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange


1.2.8p13:
    Checks & Agents:
    * 3822 FIX: MRPE commands longer than 256 characters got truncated...
    * 3958 FIX: netapp_qtree_quota: fixed graph scaling
    * 3937 FIX: check_mk_agent.aix: fixed hadling of mailq command
    * 3825 FIX: local check: no longer cuts away any trailing "9" digits in P mode
    * 3964 FIX: df_zos: Fixed not working filesystemcheck for IBM z/OS...
    * 3650 FIX: Fixed bash versionitis, unbreaking cached check results....
    * 3960 FIX: if.include: fixed wrong order if interface groups are configured
    * 3903 FIX: mssql.vbs: Fixed support for MSSQL server 2016
    * 3967 FIX: raritan_emx: Fixed broken check (wrong include temperature.includes)

    Multisite:
    * 3902 FIX: Graph search view: Changing painter options made page empty

    WATO:
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...

    Notifications:
    * 3968 FIX: Notifications / Alert handling: Fixed configuring nth notifications without state changes...


1.2.8p12:
    Core & Setup:
    * 3857 FIX: Creation of crash reports could lead to further bugs...