@@ -1,0 +1,9 @@
+Title: Add missing metric definition for 15 minute CPU load prediction'
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p14
+Date: 1479292658
+Class: fix
+
+
