@@ -14,6 +14,7 @@
     * 4086 FIX: websphere_mq_queues: fixed unknown variable
     * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
     * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
+    * 4043 FIX: Add missing metric definition for 15 minute CPU load prediction'
 
     Multisite:
     * 3970 SEC: Fixed possible URL injection on index page...
